// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`templates Components ButtonTemplate match snapshot 1`] = `
Array [
  Array [
    Object {
      "node": Object {
        "$$typeof": Symbol(machinat.element),
        "props": Object {
          "children": Object {
            "$$typeof": Symbol(machinat.element),
            "props": Object {
              "children": Array [
                Object {
                  "$$typeof": Symbol(machinat.element),
                  "props": Object {
                    "title": "check",
                    "url": "http://xxx.yy.z",
                  },
                  "type": [Function],
                },
                Object {
                  "$$typeof": Symbol(machinat.element),
                  "props": Object {
                    "payload": "_MORE_",
                    "title": "more",
                  },
                  "type": [Function],
                },
                Object {
                  "$$typeof": Symbol(machinat.element),
                  "props": Object {
                    "number": "+12345678",
                    "title": "call us",
                  },
                  "type": [Function],
                },
              ],
            },
            "type": Symbol(machinat.element.fragment),
          },
          "sharable": true,
          "text": "abc",
        },
        "type": [Function],
      },
      "path": "$",
      "type": "unit",
      "value": Object {
        "message": Object {
          "attachment": Object {
            "payload": Object {
              "buttons": Array [
                "__RENDERED_BUTTON_OBJ_1__",
                "__RENDERED_BUTTON_OBJ_2__",
                "__RENDERED_BUTTON_OBJ_3__",
              ],
              "sharable": true,
              "template_type": "button",
              "text": "
__RENDERED_TEXT_1__
__RENDERED_TEXT_2__
__RENDERED_TEXT_3__",
            },
            "type": "template",
          },
        },
      },
    },
  ],
  Array [
    Object {
      "node": Object {
        "$$typeof": Symbol(machinat.element),
        "props": Object {
          "children": Object {
            "$$typeof": Symbol(machinat.element),
            "props": Object {
              "children": Array [
                Object {
                  "$$typeof": Symbol(machinat.element),
                  "props": Object {
                    "title": "check",
                    "url": "http://xxx.yy.z",
                  },
                  "type": [Function],
                },
                Object {
                  "$$typeof": Symbol(machinat.element),
                  "props": Object {
                    "payload": "_MORE_",
                    "title": "more",
                  },
                  "type": [Function],
                },
                Object {
                  "$$typeof": Symbol(machinat.element),
                  "props": Object {
                    "number": "+12345678",
                    "title": "call us",
                  },
                  "type": [Function],
                },
              ],
            },
            "type": Symbol(machinat.element.fragment),
          },
          "text": Array [
            Object {
              "$$typeof": Symbol(machinat.element),
              "props": Object {
                "children": "foo",
              },
              "type": "i",
            },
            Object {
              "$$typeof": Symbol(machinat.element),
              "props": Object {
                "children": "bar",
              },
              "type": "b",
            },
            Object {
              "$$typeof": Symbol(machinat.element),
              "props": Object {
                "children": "baz",
              },
              "type": "del",
            },
          ],
        },
        "type": [Function],
      },
      "path": "$",
      "type": "unit",
      "value": Object {
        "message": Object {
          "attachment": Object {
            "payload": Object {
              "buttons": Array [
                "__RENDERED_BUTTON_OBJ_1__",
                "__RENDERED_BUTTON_OBJ_2__",
                "__RENDERED_BUTTON_OBJ_3__",
              ],
              "sharable": undefined,
              "template_type": "button",
              "text": "
__RENDERED_TEXT_1__
__RENDERED_TEXT_2__
__RENDERED_TEXT_3__",
            },
            "type": "template",
          },
        },
      },
    },
  ],
]
`;

exports[`templates Components GenericItem match snapshot 1`] = `
Array [
  Array [
    Object {
      "node": Object {
        "$$typeof": Symbol(machinat.element),
        "props": Object {
          "title": "foo",
        },
        "type": [Function],
      },
      "path": "$",
      "type": "part",
      "value": Object {
        "buttons": undefined,
        "default_action": undefined,
        "image_url": undefined,
        "subtitle": undefined,
        "title": "foo",
      },
    },
  ],
  Array [
    Object {
      "node": Object {
        "$$typeof": Symbol(machinat.element),
        "props": Object {
          "subtitle": "bar",
          "title": "foo",
        },
        "type": [Function],
      },
      "path": "$",
      "type": "part",
      "value": Object {
        "buttons": undefined,
        "default_action": undefined,
        "image_url": undefined,
        "subtitle": "bar",
        "title": "foo",
      },
    },
  ],
  Array [
    Object {
      "node": Object {
        "$$typeof": Symbol(machinat.element),
        "props": Object {
          "imageURL": "http://foo.bar/image",
          "title": "foo",
        },
        "type": [Function],
      },
      "path": "$",
      "type": "part",
      "value": Object {
        "buttons": undefined,
        "default_action": undefined,
        "image_url": "http://foo.bar/image",
        "subtitle": undefined,
        "title": "foo",
      },
    },
  ],
  Array [
    Object {
      "node": Object {
        "$$typeof": Symbol(machinat.element),
        "props": Object {
          "children": Object {
            "$$typeof": Symbol(machinat.element),
            "props": Object {
              "children": Array [
                Object {
                  "$$typeof": Symbol(machinat.element),
                  "props": Object {
                    "title": "check",
                    "url": "http://xxx.yy.z",
                  },
                  "type": [Function],
                },
                Object {
                  "$$typeof": Symbol(machinat.element),
                  "props": Object {
                    "payload": "_MORE_",
                    "title": "more",
                  },
                  "type": [Function],
                },
                Object {
                  "$$typeof": Symbol(machinat.element),
                  "props": Object {
                    "number": "+12345678",
                    "title": "call us",
                  },
                  "type": [Function],
                },
              ],
            },
            "type": Symbol(machinat.element.fragment),
          },
          "title": "foo",
        },
        "type": [Function],
      },
      "path": "$",
      "type": "part",
      "value": Object {
        "buttons": Array [
          "__RENDERED_BUTTON_OBJ_1__",
          "__RENDERED_BUTTON_OBJ_2__",
          "__RENDERED_BUTTON_OBJ_3__",
        ],
        "default_action": undefined,
        "image_url": undefined,
        "subtitle": undefined,
        "title": "foo",
      },
    },
  ],
  Array [
    Object {
      "node": Object {
        "$$typeof": Symbol(machinat.element),
        "props": Object {
          "defaultAction": Object {
            "$$typeof": Symbol(machinat.element),
            "props": Object {
              "extensions": true,
              "fallbackURL": "http://foo.baz/login",
              "heightRatio": "compact",
              "hideShareButton": true,
              "title": "TITLE!",
              "url": "http://foo.bar/",
            },
            "type": [Function],
          },
          "title": "foo",
        },
        "type": [Function],
      },
      "path": "$",
      "type": "part",
      "value": Object {
        "buttons": undefined,
        "default_action": Object {
          "fallback_url": "http://foo.baz/login",
          "messenger_extensions": true,
          "type": "web_url",
          "url": "http://foo.bar/",
          "webview_height_ratio": "compact",
          "webview_share_button": "hide",
        },
        "image_url": undefined,
        "subtitle": undefined,
        "title": "foo",
      },
    },
  ],
  Array [
    Object {
      "node": Object {
        "$$typeof": Symbol(machinat.element),
        "props": Object {
          "defaultAction": Object {
            "fallback_url": "http://foo.baz/login",
            "messenger_extensions": true,
            "type": "web_url",
            "url": "http://foo.bar/",
            "webview_height_ratio": "compact",
            "webview_share_button": "hide",
          },
          "title": "foo",
        },
        "type": [Function],
      },
      "path": "$",
      "type": "part",
      "value": Object {
        "buttons": undefined,
        "default_action": Object {
          "fallback_url": "http://foo.baz/login",
          "messenger_extensions": true,
          "type": "web_url",
          "url": "http://foo.bar/",
          "webview_height_ratio": "compact",
          "webview_share_button": "hide",
        },
        "image_url": undefined,
        "subtitle": undefined,
        "title": "foo",
      },
    },
  ],
  Array [
    Object {
      "node": Object {
        "$$typeof": Symbol(machinat.element),
        "props": Object {
          "children": Object {
            "$$typeof": Symbol(machinat.element),
            "props": Object {
              "children": Array [
                Object {
                  "$$typeof": Symbol(machinat.element),
                  "props": Object {
                    "title": "check",
                    "url": "http://xxx.yy.z",
                  },
                  "type": [Function],
                },
                Object {
                  "$$typeof": Symbol(machinat.element),
                  "props": Object {
                    "payload": "_MORE_",
                    "title": "more",
                  },
                  "type": [Function],
                },
                Object {
                  "$$typeof": Symbol(machinat.element),
                  "props": Object {
                    "number": "+12345678",
                    "title": "call us",
                  },
                  "type": [Function],
                },
              ],
            },
            "type": Symbol(machinat.element.fragment),
          },
          "defaultAction": Object {
            "fallback_url": "http://foo.baz/login",
            "messenger_extensions": true,
            "type": "web_url",
            "url": "http://foo.bar/",
            "webview_height_ratio": "compact",
            "webview_share_button": "hide",
          },
          "imageURL": "http://foo.bar/image",
          "subtitle": "bar",
          "title": "foo",
        },
        "type": [Function],
      },
      "path": "$",
      "type": "part",
      "value": Object {
        "buttons": Array [
          "__RENDERED_BUTTON_OBJ_1__",
          "__RENDERED_BUTTON_OBJ_2__",
          "__RENDERED_BUTTON_OBJ_3__",
        ],
        "default_action": Object {
          "fallback_url": "http://foo.baz/login",
          "messenger_extensions": true,
          "type": "web_url",
          "url": "http://foo.bar/",
          "webview_height_ratio": "compact",
          "webview_share_button": "hide",
        },
        "image_url": "http://foo.bar/image",
        "subtitle": "bar",
        "title": "foo",
      },
    },
  ],
]
`;

exports[`templates Components GenericTemplate match snapshot 1`] = `
Array [
  Array [
    Object {
      "node": Object {
        "$$typeof": Symbol(machinat.element),
        "props": Object {
          "children": Object {
            "$$typeof": Symbol(machinat.element),
            "props": Object {
              "children": Array [
                Object {
                  "$$typeof": Symbol(machinat.element),
                  "props": Object {
                    "subtitle": "bar",
                    "title": "foo1",
                  },
                  "type": [Function],
                },
                Object {
                  "$$typeof": Symbol(machinat.element),
                  "props": Object {
                    "subtitle": "baz",
                    "title": "foo2",
                  },
                  "type": [Function],
                },
                Object {
                  "$$typeof": Symbol(machinat.element),
                  "props": Object {
                    "imageURL": "http://foo.bar/image",
                    "title": "foo3",
                  },
                  "type": [Function],
                },
              ],
            },
            "type": Symbol(machinat.element.fragment),
          },
        },
        "type": [Function],
      },
      "path": "$",
      "type": "unit",
      "value": Object {
        "message": Object {
          "attachment": Object {
            "payload": Object {
              "elements": Array [
                "__RENDERED_GENERIC_ITEM_OBJ_1__",
                "__RENDERED_GENERIC_ITEM_OBJ_2__",
                "__RENDERED_GENERIC_ITEM_OBJ_3__",
              ],
              "image_aspect_ratio": undefined,
              "sharable": undefined,
              "template_type": "generic",
            },
            "type": "template",
          },
        },
      },
    },
  ],
  Array [
    Object {
      "node": Object {
        "$$typeof": Symbol(machinat.element),
        "props": Object {
          "children": Object {
            "$$typeof": Symbol(machinat.element),
            "props": Object {
              "children": Array [
                Object {
                  "$$typeof": Symbol(machinat.element),
                  "props": Object {
                    "subtitle": "bar",
                    "title": "foo1",
                  },
                  "type": [Function],
                },
                Object {
                  "$$typeof": Symbol(machinat.element),
                  "props": Object {
                    "subtitle": "baz",
                    "title": "foo2",
                  },
                  "type": [Function],
                },
                Object {
                  "$$typeof": Symbol(machinat.element),
                  "props": Object {
                    "imageURL": "http://foo.bar/image",
                    "title": "foo3",
                  },
                  "type": [Function],
                },
              ],
            },
            "type": Symbol(machinat.element.fragment),
          },
          "imageAspectRatio": "square",
          "sharable": true,
        },
        "type": [Function],
      },
      "path": "$",
      "type": "unit",
      "value": Object {
        "message": Object {
          "attachment": Object {
            "payload": Object {
              "elements": Array [
                "__RENDERED_GENERIC_ITEM_OBJ_1__",
                "__RENDERED_GENERIC_ITEM_OBJ_2__",
                "__RENDERED_GENERIC_ITEM_OBJ_3__",
              ],
              "image_aspect_ratio": "square",
              "sharable": true,
              "template_type": "generic",
            },
            "type": "template",
          },
        },
      },
    },
  ],
]
`;

exports[`templates Components ListTemplate match snapshot 1`] = `
Array [
  Array [
    Object {
      "node": Object {
        "$$typeof": Symbol(machinat.element),
        "props": Object {
          "children": Object {
            "$$typeof": Symbol(machinat.element),
            "props": Object {
              "children": Array [
                Object {
                  "$$typeof": Symbol(machinat.element),
                  "props": Object {
                    "subtitle": "bar",
                    "title": "foo1",
                  },
                  "type": [Function],
                },
                Object {
                  "$$typeof": Symbol(machinat.element),
                  "props": Object {
                    "subtitle": "baz",
                    "title": "foo2",
                  },
                  "type": [Function],
                },
                Object {
                  "$$typeof": Symbol(machinat.element),
                  "props": Object {
                    "imageURL": "http://foo.bar/image",
                    "title": "foo3",
                  },
                  "type": [Function],
                },
              ],
            },
            "type": Symbol(machinat.element.fragment),
          },
        },
        "type": [Function],
      },
      "path": "$",
      "type": "unit",
      "value": Object {
        "message": Object {
          "attachment": Object {
            "payload": Object {
              "buttons": undefined,
              "elements": Array [
                "__RENDERED_GENERIC_ITEM_OBJ_1__",
                "__RENDERED_GENERIC_ITEM_OBJ_2__",
                "__RENDERED_GENERIC_ITEM_OBJ_3__",
              ],
              "sharable": undefined,
              "template_type": "list",
              "top_element_style": undefined,
            },
            "type": "template",
          },
        },
      },
    },
  ],
  Array [
    Object {
      "node": Object {
        "$$typeof": Symbol(machinat.element),
        "props": Object {
          "button": Object {
            "$$typeof": Symbol(machinat.element),
            "props": Object {
              "title": "check",
              "url": "http://xxx.yy.z",
            },
            "type": [Function],
          },
          "children": Object {
            "$$typeof": Symbol(machinat.element),
            "props": Object {
              "children": Array [
                Object {
                  "$$typeof": Symbol(machinat.element),
                  "props": Object {
                    "subtitle": "bar",
                    "title": "foo1",
                  },
                  "type": [Function],
                },
                Object {
                  "$$typeof": Symbol(machinat.element),
                  "props": Object {
                    "subtitle": "baz",
                    "title": "foo2",
                  },
                  "type": [Function],
                },
                Object {
                  "$$typeof": Symbol(machinat.element),
                  "props": Object {
                    "imageURL": "http://foo.bar/image",
                    "title": "foo3",
                  },
                  "type": [Function],
                },
              ],
            },
            "type": Symbol(machinat.element.fragment),
          },
        },
        "type": [Function],
      },
      "path": "$",
      "type": "unit",
      "value": Object {
        "message": Object {
          "attachment": Object {
            "payload": Object {
              "buttons": Array [
                "__RENDERED_BUTTON_OBJ_1__",
              ],
              "elements": Array [
                "__RENDERED_GENERIC_ITEM_OBJ_1__",
                "__RENDERED_GENERIC_ITEM_OBJ_2__",
                "__RENDERED_GENERIC_ITEM_OBJ_3__",
              ],
              "sharable": undefined,
              "template_type": "list",
              "top_element_style": undefined,
            },
            "type": "template",
          },
        },
      },
    },
  ],
  Array [
    Object {
      "node": Object {
        "$$typeof": Symbol(machinat.element),
        "props": Object {
          "button": Object {
            "$$typeof": Symbol(machinat.element),
            "props": Object {
              "title": "check",
              "url": "http://xxx.yy.z",
            },
            "type": [Function],
          },
          "children": Object {
            "$$typeof": Symbol(machinat.element),
            "props": Object {
              "children": Array [
                Object {
                  "$$typeof": Symbol(machinat.element),
                  "props": Object {
                    "subtitle": "bar",
                    "title": "foo1",
                  },
                  "type": [Function],
                },
                Object {
                  "$$typeof": Symbol(machinat.element),
                  "props": Object {
                    "subtitle": "baz",
                    "title": "foo2",
                  },
                  "type": [Function],
                },
                Object {
                  "$$typeof": Symbol(machinat.element),
                  "props": Object {
                    "imageURL": "http://foo.bar/image",
                    "title": "foo3",
                  },
                  "type": [Function],
                },
              ],
            },
            "type": Symbol(machinat.element.fragment),
          },
          "imageAspectRatio": "square",
          "sharable": true,
        },
        "type": [Function],
      },
      "path": "$",
      "type": "unit",
      "value": Object {
        "message": Object {
          "attachment": Object {
            "payload": Object {
              "buttons": Array [
                "__RENDERED_BUTTON_OBJ_1__",
              ],
              "elements": Array [
                "__RENDERED_GENERIC_ITEM_OBJ_1__",
                "__RENDERED_GENERIC_ITEM_OBJ_2__",
                "__RENDERED_GENERIC_ITEM_OBJ_3__",
              ],
              "sharable": true,
              "template_type": "list",
              "top_element_style": undefined,
            },
            "type": "template",
          },
        },
      },
    },
  ],
]
`;

exports[`templates Components MediaTemplate match snapshot 1`] = `
Array [
  Array [
    Object {
      "node": Object {
        "$$typeof": Symbol(machinat.element),
        "props": Object {
          "children": Object {
            "$$typeof": Symbol(machinat.element),
            "props": Object {
              "children": Array [
                Object {
                  "$$typeof": Symbol(machinat.element),
                  "props": Object {
                    "title": "check",
                    "url": "http://xxx.yy.z",
                  },
                  "type": [Function],
                },
                Object {
                  "$$typeof": Symbol(machinat.element),
                  "props": Object {
                    "payload": "_MORE_",
                    "title": "more",
                  },
                  "type": [Function],
                },
                Object {
                  "$$typeof": Symbol(machinat.element),
                  "props": Object {
                    "number": "+12345678",
                    "title": "call us",
                  },
                  "type": [Function],
                },
              ],
            },
            "type": Symbol(machinat.element.fragment),
          },
          "type": "image",
          "url": "http://...",
        },
        "type": [Function],
      },
      "path": "$",
      "type": "unit",
      "value": Object {
        "message": Object {
          "attachment": Object {
            "payload": Object {
              "elements": Array [
                Object {
                  "attachment_id": undefined,
                  "buttons": Array [
                    "__RENDERED_BUTTON_OBJ_1__",
                    "__RENDERED_BUTTON_OBJ_2__",
                    "__RENDERED_BUTTON_OBJ_3__",
                  ],
                  "media_type": "image",
                  "url": "http://...",
                },
              ],
              "sharable": undefined,
              "template_type": "media",
            },
            "type": "template",
          },
        },
      },
    },
  ],
  Array [
    Object {
      "node": Object {
        "$$typeof": Symbol(machinat.element),
        "props": Object {
          "attachmentId": "__ID__",
          "children": Object {
            "$$typeof": Symbol(machinat.element),
            "props": Object {
              "children": Array [
                Object {
                  "$$typeof": Symbol(machinat.element),
                  "props": Object {
                    "title": "check",
                    "url": "http://xxx.yy.z",
                  },
                  "type": [Function],
                },
                Object {
                  "$$typeof": Symbol(machinat.element),
                  "props": Object {
                    "payload": "_MORE_",
                    "title": "more",
                  },
                  "type": [Function],
                },
                Object {
                  "$$typeof": Symbol(machinat.element),
                  "props": Object {
                    "number": "+12345678",
                    "title": "call us",
                  },
                  "type": [Function],
                },
              ],
            },
            "type": Symbol(machinat.element.fragment),
          },
          "sharable": true,
          "type": "video",
        },
        "type": [Function],
      },
      "path": "$",
      "type": "unit",
      "value": Object {
        "message": Object {
          "attachment": Object {
            "payload": Object {
              "elements": Array [
                Object {
                  "attachment_id": "__ID__",
                  "buttons": Array [
                    "__RENDERED_BUTTON_OBJ_1__",
                    "__RENDERED_BUTTON_OBJ_2__",
                    "__RENDERED_BUTTON_OBJ_3__",
                  ],
                  "media_type": "video",
                  "url": undefined,
                },
              ],
              "sharable": true,
              "template_type": "media",
            },
            "type": "template",
          },
        },
      },
    },
  ],
]
`;

exports[`templates Components OpenGraphTemplate match snapshot 1`] = `
Array [
  Array [
    Object {
      "node": Object {
        "$$typeof": Symbol(machinat.element),
        "props": Object {
          "children": Object {
            "$$typeof": Symbol(machinat.element),
            "props": Object {
              "children": Array [
                Object {
                  "$$typeof": Symbol(machinat.element),
                  "props": Object {
                    "title": "check",
                    "url": "http://xxx.yy.z",
                  },
                  "type": [Function],
                },
                Object {
                  "$$typeof": Symbol(machinat.element),
                  "props": Object {
                    "payload": "_MORE_",
                    "title": "more",
                  },
                  "type": [Function],
                },
                Object {
                  "$$typeof": Symbol(machinat.element),
                  "props": Object {
                    "number": "+12345678",
                    "title": "call us",
                  },
                  "type": [Function],
                },
              ],
            },
            "type": Symbol(machinat.element.fragment),
          },
          "url": "http://...",
        },
        "type": [Function],
      },
      "path": "$",
      "type": "unit",
      "value": Object {
        "message": Object {
          "attachment": Object {
            "payload": Object {
              "elements": Array [
                Object {
                  "buttons": Array [
                    "__RENDERED_BUTTON_OBJ_1__",
                    "__RENDERED_BUTTON_OBJ_2__",
                    "__RENDERED_BUTTON_OBJ_3__",
                  ],
                  "url": "http://...",
                },
              ],
              "sharable": undefined,
              "template_type": "open_graph",
            },
            "type": "template",
          },
        },
      },
    },
  ],
  Array [
    Object {
      "node": Object {
        "$$typeof": Symbol(machinat.element),
        "props": Object {
          "children": Object {
            "$$typeof": Symbol(machinat.element),
            "props": Object {
              "children": Array [
                Object {
                  "$$typeof": Symbol(machinat.element),
                  "props": Object {
                    "title": "check",
                    "url": "http://xxx.yy.z",
                  },
                  "type": [Function],
                },
                Object {
                  "$$typeof": Symbol(machinat.element),
                  "props": Object {
                    "payload": "_MORE_",
                    "title": "more",
                  },
                  "type": [Function],
                },
                Object {
                  "$$typeof": Symbol(machinat.element),
                  "props": Object {
                    "number": "+12345678",
                    "title": "call us",
                  },
                  "type": [Function],
                },
              ],
            },
            "type": Symbol(machinat.element.fragment),
          },
          "sharable": true,
          "url": "http://...",
        },
        "type": [Function],
      },
      "path": "$",
      "type": "unit",
      "value": Object {
        "message": Object {
          "attachment": Object {
            "payload": Object {
              "elements": Array [
                Object {
                  "buttons": Array [
                    "__RENDERED_BUTTON_OBJ_1__",
                    "__RENDERED_BUTTON_OBJ_2__",
                    "__RENDERED_BUTTON_OBJ_3__",
                  ],
                  "url": "http://...",
                },
              ],
              "sharable": true,
              "template_type": "open_graph",
            },
            "type": "template",
          },
        },
      },
    },
  ],
]
`;

exports[`templates Components ReceiptItem match snapshot 1`] = `
Array [
  Object {
    "node": Object {
      "$$typeof": Symbol(machinat.element),
      "props": Object {
        "currency": "USD",
        "imageURL": "http://i.robot/avatar",
        "price": 99.99,
        "quantity": 999,
        "subtitle": "It's real!",
        "title": "A robot!",
      },
      "type": [Function],
    },
    "path": "$",
    "type": "part",
    "value": Object {
      "currency": "USD",
      "image_url": "http://i.robot/avatar",
      "price": 99.99,
      "quantity": 999,
      "subtitle": "It's real!",
      "title": "A robot!",
    },
  },
]
`;

exports[`templates Components ReceiptTemplate match snapshot 1`] = `
Array [
  Object {
    "node": Object {
      "$$typeof": Symbol(machinat.element),
      "props": Object {
        "address": Object {
          "city": "Menlo Park",
          "country": "US",
          "postal_code": "94025",
          "state": "CA",
          "street_1": "1 Hacker Way",
          "street_2": "",
        },
        "adjustments": Array [
          Object {
            "amount": 20,
            "name": "New Customer Discount",
          },
          Object {
            "amount": 10,
            "name": "$10 Off Coupon",
          },
        ],
        "children": Array [
          Object {
            "$$typeof": Symbol(machinat.element),
            "props": Object {
              "title": "Buzz Lightyear",
            },
            "type": [Function],
          },
          Object {
            "$$typeof": Symbol(machinat.element),
            "props": Object {
              "title": "Woody",
            },
            "type": [Function],
          },
          Object {
            "$$typeof": Symbol(machinat.element),
            "props": Object {
              "title": "Slinky Dog",
            },
            "type": [Function],
          },
        ],
        "currency": "USD",
        "orderNumber": "12345",
        "orderURL": "http://what.a.shop",
        "paymentMethod": "Visa 2345",
        "recipientName": "John Doe",
        "sharable": true,
        "summary": Object {
          "shipping_cost": 4.95,
          "subtotal": 75,
          "total_cost": 56.14,
          "total_tax": 6.19,
        },
        "timestamp": "1428444852",
      },
      "type": [Function],
    },
    "path": "$",
    "type": "unit",
    "value": Object {
      "message": Object {
        "attachment": Object {
          "payload": Object {
            "address": Object {
              "city": "Menlo Park",
              "country": "US",
              "postal_code": "94025",
              "state": "CA",
              "street_1": "1 Hacker Way",
              "street_2": "",
            },
            "adjustments": Array [
              Object {
                "amount": 20,
                "name": "New Customer Discount",
              },
              Object {
                "amount": 10,
                "name": "$10 Off Coupon",
              },
            ],
            "currency": "USD",
            "elements": Array [
              "__RENDERED_RECEIPT_TEMPLATE_ITEM_OBJ_1__",
              "__RENDERED_RECEIPT_TEMPLATE_ITEM_OBJ_2__",
              "__RENDERED_RECEIPT_TEMPLATE_ITEM_OBJ_3__",
            ],
            "order_number": "12345",
            "order_url": "http://what.a.shop",
            "payment_method": "Visa 2345",
            "recipient_name": "John Doe",
            "sharable": true,
            "summary": Object {
              "shipping_cost": 4.95,
              "subtotal": 75,
              "total_cost": 56.14,
              "total_tax": 6.19,
            },
            "template_type": "receipt",
            "timestamp": "1428444852",
          },
          "type": "template",
        },
      },
    },
  },
]
`;
